# tapper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/dev/: high_level.md  os_specific.md  parser-spec.txt  plans.md
src/tapper/: __init__.py  config.py  configuration.py  dummy.py  parser.py  report.py  trigger_conditions.py
src/tapper/action/: runner.py  wrapper.py
src/tapper/boot/: initializer.py  tray_icon.py  tree_transformer.py
src/tapper/command/: base.py  base_commander.py  send_processor.py  symbol.py
src/tapper/command/keyboard/: keyboard_commander.py  win32_kb_commander.py
src/tapper/command/mouse/: mouse_commander.py  win32_mouse_commander.py
src/tapper/controller/: flow_control.py  resource_controller.py  send_processor.py  sleep_processor.py
src/tapper/controller/keyboard/: api.py  kb_api.py  kb_linux_evdev_impl.py  kb_linux_impl.py  kb_win32_winput_impl.py  win32_winput_impl.py
src/tapper/controller/mouse/: api.py  mouse_api.py  mouse_linux_evdev_impl.py  mouse_win32_winput_impl.py  win32_winput_impl.py
src/tapper/controller/window/: window_api.py  window_win32_impl.py
src/tapper/feedback/: logger.py
src/tapper/helper/: actions.py  controls.py  helper_model.py  img.py  lang.py  model.py  model_types.py  recording.py  repeat.py
src/tapper/helper/_util/: image.py  image_fuzz.py  image_util.py  record_util.py  recorder.py  repeat_util.py  repeater.py
src/tapper/helper/_util/image/: base.py  find_util.py  pixel_util.py  snip_util.py
src/tapper/logging/: logger-config.json  logger.py
src/tapper/model/: constants.py  errors.py  keyboard.py  languages.py  mouse.py  send.py  tap_tree.py  tap_tree_shadow.py  trigger.py  types_.py  window.py
src/tapper/parser/: common.py  send_parser.py  trigger_parser.py  util.py
src/tapper/pubsub/: event.py
src/tapper/signal/: base_listener.py  base_signal.py  base_signal_listener.py  processor.py  signal_processor.py  signal_wrapper.py  wrapper.py
src/tapper/signal/keyboard/: keyboard_listener.py  linux_kb_listener.py  win32_kb_listener.py
src/tapper/signal/listener/: base_signal_listener.py
src/tapper/signal/listener/keyboard/: keyboard_listener.py  win32_kb_listener.py
src/tapper/signal/listener/mouse/: mouse_listener.py
src/tapper/signal/mouse/: mouse_listener.py  win32_mouse_listener.py
src/tapper/state/: keeper.py
src/tapper/tracking/: base_tracker.py
src/tapper/tracking/window/: win32_window_tracker.py  window_tracker.py
src/tapper/util/: cache.py  datastructs.py  event.py  type_check.py
src/tapper/util/linux/: evdev_common.py
src/tapper/validation/: report.py
tests/: conftest.py  integration.py  strategies.py  testutil_model.py
tests/integration/: conftest.py  test_base_tapper.py  test_trigger_conditions.py
tests/manual/: kb_controller.py  kb_listener.py  mouse_commander.py  mouse_listener.py  tapper_helpers.py  tapper_lang_helper.py  tapper_simple.py  util_mantest.py  window_controller.py
tests/tapper/: dummy.py  dummy_test.py  test_parser.py
tests/tapper/action/: test_action_runner.py
tests/tapper/boot/: test_tree_transformer.py
tests/tapper/command/: test_send_processor.py
tests/tapper/controller/: test_mouse_controllers.py  test_send_processor.py  test_sleep_processor.py  test_window_controllers.py
tests/tapper/helper/: test_lang.py  test_recording.py  test_repeat.py
tests/tapper/helper/image/: img_for_test.py  img_test_util.py  test_img.py  test_pixel.py  test_snip.py
tests/tapper/model/: test_data_integrity.py  test_languages.py  test_tap_tree_shadow.py
tests/tapper/parser/: test_send_parser.py  test_trigger_parser.py
tests/tapper/pubsub/: test_event.py
tests/tapper/signal/: test_kb_listeners.py  test_mouse_listeners.py  test_processor.py  test_signal_processor.py  test_wrapper.py
tests/tapper/signal/keyboard/: test_listeners.py
tests/tapper/state/: test_keeper.py
tests/tapper/util/: test_datastructs.py  test_event.py  test_type_check.py
tests/unit/model/: test_data_integrity.py
tests/unit/signal/keyboard/: test_listeners.py
tests/unit/util/: test_datastructs.py  test_event.py
