[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "tapper"
version = "2022.12.001"
description = "Modern Hotkey and Macro Tool"
authors = [{ name = "IGalat", email = "author_email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Typing :: Typed",
]


[project.urls]
"Homepage" = "https://github.com/IGalat/tapper"


[tool.pytest.ini_options]
addopts = "--cov=tapper"
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]


[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
