[options]
package_dir = =src
install_requires =
    typing_extensions>=4.3.0
    winput>=1.5.0; sys_platform == 'win32'
    pywin32>=305; sys_platform == 'win32'
    evdev>=1.6.0; sys_platform == 'linux'

python_requires = >=3.10
zip_safe = no

[options.extras_require]
all = # for users. Contributors should use "dev"
    tapper[tray]
tray =
    pillow>=9.4.0
    pystray>=0.19.4
testing =
    tapper[all]
    pytest>=7.1
    pytest-cov>=3
    mypy>=0.971
    flake8>=5
    tox>=3.25
    pre-commit>=2.20
dev =
    tapper[testing]
    build
    twine


[options.package_data]
tapper = py.typed

[flake8]
max-line-length = 120
